--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
     <meta name="description" content="Сайт о том как эффективно учиться" />
     <meta name="keywords" content="Учеба, знания, Фейнман" />
     <meta name="author" content="Максим Есин" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Научиться учиться</title>
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <img
+          class="logo logo_place_header"
+          src="./images/logo_place_header.svg"
+          alt="Лого Яндекс Практикум"
+        />
+        <h1 class="header__title">Научиться учиться</h1>
+        <h4 class="text_25_18_400 header__subtitle">
+          Какие современные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a class="link header__link" href="#">Узнать --> </a>
+        </h4>
+        <div class="header__square-pic"></div>
+        <img
+          class="header__main-illustration"
+          src="./images/header-image.png"
+          alt="Картина 'Опять двойка'"
+        />
+      </header>
     </div>
   </body>
 </html>
