--- a/index.html
+++ b/index.html
@@ -31,6 +31,31 @@
           alt="Картина 'Опять двойка'"
         />
       </header>
+      <section class="description">
+        <div class="two-columns">
+          <div class="text_1-2_18_400 two-columns__brief">
+            Главные проблемы в обучении
+          </div>
+          <div class="two-columns__main-text text_34_24_400">
+            <p class="two-columns__paragraph">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
+              решать однообразные задачи, чтобы лучше сдать тест, но часто в
+              итоге это не дает нам реального знания. Зубрежка быстро
+              выветривается и не приносит пользы.
+            </p>
+            <p class="two-columns__paragraph">
+              <span class="two-columns__span-accent">Вывод:</span> учиться тоже
+              нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">
+              Конкретные техники и упражнения помогают изменить подход к
+              обучению, сделать его эффективным и захватывающим. Эти же техники
+              применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
