--- a/index.html
+++ b/index.html
@@ -31,31 +31,83 @@
           alt="Картина 'Опять двойка'"
         />
       </header>
-      <section class="description">
-        <div class="two-columns">
-          <div class="text_1-2_18_400 two-columns__brief">
-            Главные проблемы в обучении
+      <main class="content">
+        <section class="description">
+          <div class="two-columns">
+            <div class="text_1-2_18_400 two-columns__brief">
+              Главные проблемы в обучении
+            </div>
+            <div class="two-columns__main-text text_34_24_400">
+              <p class="two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </p>
+              <p class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод:</span> учиться
+                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </p>
+              <p class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Эти же
+                техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
           </div>
-          <div class="two-columns__main-text text_34_24_400">
-            <p class="two-columns__paragraph">
-              Ни в школе, ни в институте нас не учат тому, как правильно изучать
-              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
-              решать однообразные задачи, чтобы лучше сдать тест, но часто в
-              итоге это не дает нам реального знания. Зубрежка быстро
-              выветривается и не приносит пользы.
-            </p>
-            <p class="two-columns__paragraph">
-              <span class="two-columns__span-accent">Вывод:</span> учиться тоже
-              нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-            </p>
-            <p class="two-columns__paragraph">
-              Конкретные техники и упражнения помогают изменить подход к
-              обучению, сделать его эффективным и захватывающим. Эти же техники
-              применяются на примере обучения в Практикуме.
-            </p>
+        </section>
+        <section class="digits">
+          <h2 class="title">Цифры и факты</h2>
+          <h3 class="subtitle">Про учёбу и мозг</h3>
+          <div class="table">
+            <div class="table__cell digits__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <h4 class="table__text">Число нейронов в мозге человека</h4>
+            </div>
+            <div class="table__cell digits__cell">
+              <h3 class="table__heading">2.1 миллиарда</h3>
+              <h4 class="table__text">
+                Число нуждающихся в повышении квалификации
+              </h4>
+              <h4 class="table__text">Всемирный Банк, 2017</h4>
+            </div>
+            <div class="table__cell digits__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <h4 class="table__text">Объём памяти человека</h4>
+            </div>
+            <div class="table__cell digits__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <h4 class="table__text">
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
+              </h4>
+            </div>
+            <div class="table__cell digits__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <h4 class="table__text">
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
+              </h4>
+              <h4 class="table__text">Всемирный Банк, 2017</h4>
+            </div>
+            <div class="table__cell digits__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <h4 class="table__text">Пик обучаемости</h4>
+            </div>
+            <div class="table__cell digits__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <h4 class="table__text">Открытие кривой забывания</h4>
+            </div>
+            <div class="table__cell digits__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <h4 class="table__text">Открытие условного рефлекса</h4>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
+        <section class="feynman"></section>
+      </main>
     </div>
   </body>
 </html>
