--- a/index.html
+++ b/index.html
@@ -106,7 +106,16 @@
             </div>
           </div>
         </section>
-        <section class="feynman"></section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <h3 class="feynman__text">Выучить и не забыть.</h3>
+          <a href="#" class="link feynman__text feynman__link">Подробнее --></a>
+          <img
+            class="feynman__image"
+            src="./images/feynman.png"
+            alt="Фото Фейнмана"
+          />
+        </section>
       </main>
     </div>
   </body>
