--- a/index.html
+++ b/index.html
@@ -116,6 +116,73 @@
             alt="Фото Фейнмана"
           />
         </section>
+        <section class="kaufman">
+          <h2 class="title kaufman__title_theme_dark theme_dark">
+            Принципы обучения
+          </h2>
+          <h3 class="subtitle theme_dark">от Джоша Кауфмана</h3>
+          <div class="table">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">1</h3>
+              <h4 class="table__text">Выберите привлекательный проект.</h4>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">2</h3>
+              <h4 class="table__text">
+                Сосредоточьтесь на каком-то одном навыке.
+              </h4>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">3</h3>
+              <h4 class="table__text">
+                Определите целевой уровень мастерства.
+              </h4>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">4</h3>
+              <h4 class="table__text">Разбейте навык на элементы.</h4>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">5</h3>
+              <h4 class="table__text">
+                Приготовьте всё необходимое для занятий.
+              </h4>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">6</h3>
+              <h4 class="table__text">Устраните препятствия для занятий.</h4>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">7</h3>
+              <h4 class="table__text">
+                Выделите специальное время для занятий.
+              </h4>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">8</h3>
+              <h4 class="table__text">
+                Создайте быстрые петли обратной связи.
+              </h4>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">9</h3>
+              <h4 class="table__text">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </h4>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">10</h3>
+              <h4 class="table__text">
+                Уделяйте внимание количеству и скорости.
+              </h4>
+            </div>
+          </div>
+          <img
+            class="kaufman__triangle"
+            src="./images/kaufman-triangle.svg"
+            alt="Треугольник"
+          />
+        </section>
       </main>
     </div>
   </body>
