--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <main class="content">
         <section class="description">
           <div class="two-columns">
-            <div class="text_1-2_18_400 two-columns__brief">
+            <h3 class="text_1-2_18_400 two-columns__brief">
               Главные проблемы в обучении
-            </div>
+            </h3>
             <div class="two-columns__main-text text_34_24_400">
               <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
@@ -184,6 +184,39 @@
           />
         </section>
       </main>
+      <footer class="footer">
+        <section class="footer__columns">
+          <div class="footer__column_copyright">
+            <img
+              class="logo logo_place_footer"
+              src="./images/logo_place_footer.svg"
+              alt="Лого Яндекс Практикум"
+            />
+            <h3 class="theme_dark">&copy; Максим Есин</h3>
+          </div>
+          <div class="footer__info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
+            <a href="#" class="footer__column-links">Главная</a>
+            <a href="#" class="footer__column-links">Концепция</a>
+            <a href="#" class="footer__column-links">Наставники</a>
+          </div>
+          <div class="footer__social">
+            <h3 class="footer__column-heading">Соцсети</h3>
+            <a href="#" class="footer__column-links"
+              ><img src="./images/youtube-icon.svg" alt="Иконка Ютуб" />
+              YouTube</a
+            >
+            <a href="#" class="footer__column-links"
+              ><img src="./images/vk_color_white.svg" alt="Иконка Вконтакте" />
+              ВКонтакте</a
+            >
+            <a href="#" class="footer__column-links"
+              ><img src="./images/tiktok-icon.svg" alt="Иконка ТикТок" />
+              TikTok</a
+            >
+          </div>
+        </section>
+      </footer>
     </div>
   </body>
 </html>
