--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
           alt="Лого Яндекс Практикум"
         />
         <h1 class="header__title">Научиться учиться</h1>
-        <h4 class="text_25_18_400 header__subtitle">
+        <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
-          <a class="link header__link" href="#">Узнать --> </a>
-        </h4>
+          <a class="link header__link" href="#"
+            >Узнать
+            <img class="header__arrow" src="./images/arrow.png" alt="Cтрелка" />
+          </a>
+        </p>
         <div class="header__square-pic"></div>
         <img
           class="header__main-illustration"
@@ -33,11 +36,9 @@
       </header>
       <main class="content">
         <section class="description">
-          <div class="two-columns">
-            <h3 class="text_1-2_18_400 two-columns__brief">
-              Главные проблемы в обучении
-            </h3>
-            <div class="two-columns__main-text text_34_24_400">
+          <article class="two-columns">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
                 изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
@@ -56,60 +57,63 @@
                 техники применяются на примере обучения в Практикуме.
               </p>
             </div>
-          </div>
+          </article>
         </section>
         <section class="digits">
-          <h2 class="title">Цифры и факты</h2>
-          <h3 class="subtitle">Про учёбу и мозг</h3>
-          <div class="table">
-            <div class="table__cell digits__cell">
+          <h2 class="digits-title">Цифры и факты</h2>
+          <p class="digits-subtitle">Про учёбу и мозг</p>
+          <ul class="table">
+            <li class="table__cell digits__table_cell">
               <h3 class="table__heading">86 миллиардов</h3>
-              <h4 class="table__text">Число нейронов в мозге человека</h4>
-            </div>
-            <div class="table__cell digits__cell">
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </li>
+            <li class="table__cell digits__table_cell">
               <h3 class="table__heading">2.1 миллиарда</h3>
-              <h4 class="table__text">
+              <p class="table__text">
                 Число нуждающихся в повышении квалификации
-              </h4>
-              <h4 class="table__text">Всемирный Банк, 2017</h4>
-            </div>
-            <div class="table__cell digits__cell">
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </li>
+            <li class="table__cell digits__table_cell">
               <h3 class="table__heading">1000 терабайт</h3>
-              <h4 class="table__text">Объём памяти человека</h4>
-            </div>
-            <div class="table__cell digits__cell">
+              <p class="table__text">Объём памяти человека</p>
+            </li>
+            <li class="table__cell digits__table_cell">
               <h3 class="table__heading">500 триллионов</h3>
-              <h4 class="table__text">
+              <p class="table__text">
                 Число ответственных за обучение нервных синапсов у взрослого
                 человека
-              </h4>
-            </div>
-            <div class="table__cell digits__cell">
+              </p>
+            </li>
+            <li class="table__cell digits__table_cell">
               <h3 class="table__heading">420 миллионов</h3>
-              <h4 class="table__text">
+              <p class="table__text">
                 Число взрослых людей моложе 25 лет, не имеющих образования для
                 трудоустройства
-              </h4>
-              <h4 class="table__text">Всемирный Банк, 2017</h4>
-            </div>
-            <div class="table__cell digits__cell">
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </li>
+            <li class="table__cell digits__table_cell">
               <h3 class="table__heading">17–20 лет</h3>
-              <h4 class="table__text">Пик обучаемости</h4>
-            </div>
-            <div class="table__cell digits__cell">
+              <p class="table__text">Пик обучаемости</p>
+            </li>
+            <li class="table__cell digits__table_cell">
               <h3 class="table__heading">1885 год</h3>
-              <h4 class="table__text">Открытие кривой забывания</h4>
-            </div>
-            <div class="table__cell digits__cell">
+              <p class="table__text">Открытие кривой забывания</p>
+            </li>
+            <li class="table__cell digits__table_cell">
               <h3 class="table__heading">1889 год</h3>
-              <h4 class="table__text">Открытие условного рефлекса</h4>
-            </div>
-          </div>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </li>
+          </ul>
         </section>
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <h3 class="feynman__text">Выучить и не забыть.</h3>
-          <a href="#" class="link feynman__text feynman__link">Подробнее --></a>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="link feynman__text feynman__link"
+            >Подробнее
+            <img class="feynman__arrow" src="./images/arrow.png" alt="Стрелка"
+          /></a>
           <img
             class="feynman__image"
             src="./images/feynman.png"
@@ -117,105 +121,107 @@
           />
         </section>
         <section class="kaufman">
-          <h2 class="title kaufman__title_theme_dark theme_dark">
+          <h2 class="title kaufman__title title_theme_dark">
             Принципы обучения
           </h2>
-          <h3 class="subtitle theme_dark">от Джоша Кауфмана</h3>
-          <div class="table">
-            <div class="table__cell table__cell_theme_dark">
+          <p class="kaufman__subtitle subtitle_theme_dark">от Джоша Кауфмана</p>
+          <ul class="table">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">1</h3>
-              <h4 class="table__text">Выберите привлекательный проект.</h4>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+              <p class="table__text">Выберите привлекательный проект.</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">2</h3>
-              <h4 class="table__text">
+              <p class="table__text">
                 Сосредоточьтесь на каком-то одном навыке.
-              </h4>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">3</h3>
-              <h4 class="table__text">
-                Определите целевой уровень мастерства.
-              </h4>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+              <p class="table__text">Определите целевой уровень мастерства.</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">4</h3>
-              <h4 class="table__text">Разбейте навык на элементы.</h4>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+              <p class="table__text">Разбейте навык на элементы.</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">5</h3>
-              <h4 class="table__text">
+              <p class="table__text">
                 Приготовьте всё необходимое для занятий.
-              </h4>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">6</h3>
-              <h4 class="table__text">Устраните препятствия для занятий.</h4>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+              <p class="table__text">Устраните препятствия для занятий.</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">7</h3>
-              <h4 class="table__text">
-                Выделите специальное время для занятий.
-              </h4>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+              <p class="table__text">Выделите специальное время для занятий.</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">8</h3>
-              <h4 class="table__text">
-                Создайте быстрые петли обратной связи.
-              </h4>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+              <p class="table__text">Создайте быстрые петли обратной связи.</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">9</h3>
-              <h4 class="table__text">
+              <p class="table__text">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
-              </h4>
-            </div>
-            <div class="table__cell table__cell_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">10</h3>
-              <h4 class="table__text">
+              <p class="table__text">
                 Уделяйте внимание количеству и скорости.
-              </h4>
-            </div>
-          </div>
-          <img
-            class="kaufman__triangle"
-            src="./images/kaufman-triangle.svg"
-            alt="Треугольник"
-          />
+              </p>
+            </li>
+          </ul>
+          <div class="kaufman__triangle"></div>
         </section>
       </main>
       <footer class="footer">
-        <section class="footer__columns">
-          <div class="footer__column_copyright">
+        <div class="footer__columns">
+          <div class="column_copyright">
             <img
               class="logo logo_place_footer"
               src="./images/logo_place_footer.svg"
               alt="Лого Яндекс Практикум"
             />
-            <h3 class="theme_dark">&copy; Максим Есин</h3>
+            <p class="footer__author">&copy; Максим Есин</p>
           </div>
-          <div class="footer__info">
+          <nav class="footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
-            <a href="#" class="footer__column-links">Главная</a>
-            <a href="#" class="footer__column-links">Концепция</a>
-            <a href="#" class="footer__column-links">Наставники</a>
-          </div>
-          <div class="footer__social">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
+          </nav>
+          <div class="footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
-            <a href="#" class="footer__column-links"
-              ><img src="./images/youtube-icon.svg" alt="Иконка Ютуб" />
+            <a href="#" class="footer__column-link"
+              ><img
+                class="footer__social-icon"
+                src="./images/youtube-icon.svg"
+                alt="Иконка Ютуб"
+              />
               YouTube</a
             >
-            <a href="#" class="footer__column-links"
-              ><img src="./images/vk_color_white.svg" alt="Иконка Вконтакте" />
+            <a href="#" class="footer__column-link"
+              ><img
+                class="footer__social-icon"
+                src="./images/vk_color_white.svg"
+                alt="Иконка Вконтакте"
+              />
               ВКонтакте</a
             >
-            <a href="#" class="footer__column-links"
-              ><img src="./images/tiktok-icon.svg" alt="Иконка ТикТок" />
+            <a href="#" class="footer__column-link"
+              ><img
+                class="footer__social-icon"
+                src="./images/tiktok-icon.svg"
+                alt="Иконка ТикТок"
+              />
               TikTok</a
             >
           </div>
-        </section>
+        </div>
       </footer>
     </div>
   </body>
