--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Сайт о том как эффективно учиться" />
     <meta name="keywords" content="Учеба, знания, Фейнман" />
     <meta name="author" content="Максим Есин" />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <title>Научиться учиться</title>
   </head>
   <body>
@@ -60,32 +60,32 @@
           </article>
         </section>
         <section class="digits">
-          <h2 class="digits-title">Цифры и факты</h2>
-          <p class="digits-subtitle">Про учёбу и мозг</p>
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учёбу и мозг</p>
           <ul class="table">
-            <li class="table__cell digits__table_cell">
+            <li class="table__cell">
               <h3 class="table__heading">86 миллиардов</h3>
               <p class="table__text">Число нейронов в мозге человека</p>
             </li>
-            <li class="table__cell digits__table_cell">
+            <li class="table__cell">
               <h3 class="table__heading">2.1 миллиарда</h3>
               <p class="table__text">
                 Число нуждающихся в повышении квалификации
               </p>
               <p class="table__text">Всемирный Банк, 2017</p>
             </li>
-            <li class="table__cell digits__table_cell">
+            <li class="table__cell">
               <h3 class="table__heading">1000 терабайт</h3>
               <p class="table__text">Объём памяти человека</p>
             </li>
-            <li class="table__cell digits__table_cell">
+            <li class="table__cell">
               <h3 class="table__heading">500 триллионов</h3>
               <p class="table__text">
                 Число ответственных за обучение нервных синапсов у взрослого
                 человека
               </p>
             </li>
-            <li class="table__cell digits__table_cell">
+            <li class="table__cell">
               <h3 class="table__heading">420 миллионов</h3>
               <p class="table__text">
                 Число взрослых людей моложе 25 лет, не имеющих образования для
@@ -93,15 +93,15 @@
               </p>
               <p class="table__text">Всемирный Банк, 2017</p>
             </li>
-            <li class="table__cell digits__table_cell">
+            <li class="table__cell">
               <h3 class="table__heading">17–20 лет</h3>
               <p class="table__text">Пик обучаемости</p>
             </li>
-            <li class="table__cell digits__table_cell">
+            <li class="table__cell">
               <h3 class="table__heading">1885 год</h3>
               <p class="table__text">Открытие кривой забывания</p>
             </li>
-            <li class="table__cell digits__table_cell">
+            <li class="table__cell">
               <h3 class="table__heading">1889 год</h3>
               <p class="table__text">Открытие условного рефлекса</p>
             </li>
@@ -121,56 +121,70 @@
           />
         </section>
         <section class="kaufman">
-          <h2 class="title kaufman__title title_theme_dark">
+          <h2 class="section-title section-title_theme_dark">
             Принципы обучения
           </h2>
-          <p class="kaufman__subtitle subtitle_theme_dark">от Джоша Кауфмана</p>
-          <ul class="table">
+          <p class="section-subtitle section-subtitle_theme_dark">
+            от Джоша Кауфмана
+          </p>
+          <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">1</h3>
-              <p class="table__text">Выберите привлекательный проект.</p>
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
+              <p class="table__text table__text_theme_dark">
+                Выберите привлекательный проект.
+              </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">2</h3>
-              <p class="table__text">
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__text table__text_theme_dark">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">3</h3>
-              <p class="table__text">Определите целевой уровень мастерства.</p>
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__text table__text_theme_dark">
+                Определите целевой уровень мастерства.
+              </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">4</h3>
-              <p class="table__text">Разбейте навык на элементы.</p>
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__text table__text_theme_dark">
+                Разбейте навык на элементы.
+              </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">5</h3>
-              <p class="table__text">
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__text table__text_theme_dark">
                 Приготовьте всё необходимое для занятий.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">6</h3>
-              <p class="table__text">Устраните препятствия для занятий.</p>
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
+              <p class="table__text table__text_theme_dark">
+                Устраните препятствия для занятий.
+              </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">7</h3>
-              <p class="table__text">Выделите специальное время для занятий.</p>
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
+              <p class="table__text table__text_theme_dark">
+                Выделите специальное время для занятий.
+              </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">8</h3>
-              <p class="table__text">Создайте быстрые петли обратной связи.</p>
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
+              <p class="table__text table__text_theme_dark">
+                Создайте быстрые петли обратной связи.
+              </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">9</h3>
-              <p class="table__text">
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
+              <p class="table__text table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">10</h3>
-              <p class="table__text">
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
+              <p class="table__text table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
               </p>
             </li>
@@ -182,7 +196,7 @@
         <div class="footer__columns">
           <div class="column_copyright">
             <img
-              class="logo logo_place_footer"
+              class="logo"
               src="./images/logo_place_footer.svg"
               alt="Лого Яндекс Практикум"
             />
