--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Сайт о том как эффективно учиться" />
     <meta name="keywords" content="Учеба, знания, Фейнман" />
     <meta name="author" content="Максим Есин" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <title>Научиться учиться</title>
   </head>
@@ -27,7 +26,7 @@
             <img class="header__arrow" src="./images/arrow.png" alt="Cтрелка" />
           </a>
         </p>
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
         <img
           class="header__main-illustration"
           src="./images/header-image.png"
@@ -58,6 +57,65 @@
               </p>
             </div>
           </article>
+        </section>
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <div class="cards">
+            <div class="cards__item">
+              <img src="./images/cards-attention.png" class="cards__image" />
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать сфокусированное и
+                рассеянное мышление.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img src="./images/cards-recall.png" class="cards__image" />
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит соединить разрозненные
+                порции памяти.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img src="./images/cards-interliving.png" class="cards__image" />
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, они обогащают друг
+                друга.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img src="./images/cards-question.png" class="cards__image" />
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, который вас
+                действительно волнует.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img src="./images/cards-competence.png" class="cards__image" />
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: вам только
+                кажется, что вы владеете новой темой.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="link feynman__text feynman__link"
+            >Подробнее
+            <img class="feynman__arrow" src="./images/arrow.png" alt="Стрелка"
+          /></a>
+          <img
+            class="feynman__image"
+            src="./images/feynman.png"
+            alt="Фото Фейнмана"
+          />
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
@@ -106,19 +164,6 @@
               <p class="table__text">Открытие условного рефлекса</p>
             </li>
           </ul>
-        </section>
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="link feynman__text feynman__link"
-            >Подробнее
-            <img class="feynman__arrow" src="./images/arrow.png" alt="Стрелка"
-          /></a>
-          <img
-            class="feynman__image"
-            src="./images/feynman.png"
-            alt="Фото Фейнмана"
-          />
         </section>
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
@@ -189,12 +234,12 @@
               </p>
             </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
         </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="column_copyright">
+          <div class="footer__column_content_copyright">
             <img
               class="logo"
               src="./images/logo_place_footer.svg"
