--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <div class="cards">
             <div class="cards__item">
-              <img src="./images/cards-attention.png" class="cards__image" />
+              <img
+                src="./images/cards-attention.png"
+                class="cards__image"
+                alt="Картинка книги"
+              />
               <h3 class="cards__title">Два вида внимания</h3>
               <p class="cards__description">
                 Глубокие знания возникают, если чередовать сфокусированное и
@@ -71,7 +75,11 @@
               </p>
             </div>
             <div class="cards__item">
-              <img src="./images/cards-recall.png" class="cards__image" />
+              <img
+                src="./images/cards-recall.png"
+                class="cards__image"
+                alt="Картинка статуи"
+              />
               <h3 class="cards__title">Recall</h3>
               <p class="cards__description">
                 Вспоминайте изученное — это позволит соединить разрозненные
@@ -79,7 +87,11 @@
               </p>
             </div>
             <div class="cards__item">
-              <img src="./images/cards-interliving.png" class="cards__image" />
+              <img
+                src="./images/cards-interliving.png"
+                class="cards__image"
+                alt="Картинка перехода"
+              />
               <h3 class="cards__title">Интерливинг</h3>
               <p class="cards__description">
                 Изучайте несколько навыков одновременно, они обогащают друг
@@ -87,7 +99,11 @@
               </p>
             </div>
             <div class="cards__item">
-              <img src="./images/cards-question.png" class="cards__image" />
+              <img
+                src="./images/cards-question.png"
+                class="cards__image"
+                alt="Картинка комнаты"
+              />
               <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">
                 Слушая преподавателя, придумывайте хороший вопрос, который вас
@@ -95,7 +111,11 @@
               </p>
             </div>
             <div class="cards__item">
-              <img src="./images/cards-competence.png" class="cards__image" />
+              <img
+                src="./images/cards-competence.png"
+                class="cards__image"
+                alt="Картинка книг"
+              />
               <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">
                 Повторите про себя, запишите, расскажите другу: вам только
@@ -206,6 +226,31 @@
               <p class="table__text">Открытие условного рефлекса</p>
             </li>
           </ul>
+        </section>
+        <section class="khan">
+          <article class="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__title">Весь мир — школа</h2>
+            <p class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.
+            </p>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <img
+                class="khan__book-pic"
+                src="./images/khan-book.jpg"
+                alt="Картинка книги"
+              />
+              <a href="#" class="khan__buy-link"
+                >Купить книгу <img class="khan__arrow" src="./images/arrow.png"
+              /></a>
+            </div>
+          </article>
         </section>
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
