--- a/index.html
+++ b/index.html
@@ -323,6 +323,34 @@
           </ul>
           <div class="kaufman__triangle rotation"></div>
         </section>
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </p>
+          <div class="resources__logo-zone">
+            <a class="resources__link" href="#"
+              ><img
+                src="./images/logo/resources-arzamas.svg"
+                class="resources__logo"
+            /></a>
+            <a class="resources__link" href="#"
+              ><img
+                src="./images/logo/resources-n1.svg"
+                class="resources__logo"
+            /></a>
+            <a class="resources__link" href="#"
+              ><img
+                src="./images/logo/resources-strelka.svg"
+                class="resources__logo"
+            /></a>
+            <a class="resources__link" href="#"
+              ><img
+                src="./images/logo/resources-polka.svg"
+                class="resources__logo"
+            /></a>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
