--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
               height="316"
               src="https://www.youtube.com/embed/5MgBikgcWnY"
               title="YouTube video player"
-              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
             ></iframe>
@@ -247,7 +246,11 @@
                 alt="Картинка книги"
               />
               <a href="#" class="khan__buy-link"
-                >Купить книгу <img class="khan__arrow" src="./images/arrow.png"
+                >Купить книгу
+                <img
+                  class="khan__arrow"
+                  src="./images/arrow.png"
+                  alt="Иконка стрелки"
               /></a>
             </div>
           </article>
@@ -333,21 +336,25 @@
               ><img
                 src="./images/logo/resources-arzamas.svg"
                 class="resources__logo"
+                alt="иконка"
             /></a>
             <a class="resources__link" href="#"
               ><img
                 src="./images/logo/resources-n1.svg"
                 class="resources__logo"
+                alt="иконка"
             /></a>
             <a class="resources__link" href="#"
               ><img
                 src="./images/logo/resources-strelka.svg"
                 class="resources__logo"
+                alt="иконка"
             /></a>
             <a class="resources__link" href="#"
               ><img
                 src="./images/logo/resources-polka.svg"
                 class="resources__logo"
+                alt="иконка"
             /></a>
           </div>
         </section>
